--- a/src/containers/Work/Work.scss
+++ b/src/containers/Work/Work.scss
@@ -10,7 +10,6 @@
   justify-content: flex-start;
   align-items: center;
   margin: 2rem 0 1rem 0;
-  //   width: 100%;
 
   .app__work-filter-item {
     padding: 0.5rem 1rem;
@@ -19,7 +18,6 @@
     color: black;
     font-weight: 800;
     cursor: pointer;
-
     margin: 0.5rem;
     transition: all 0.3s ease;
 
@@ -38,6 +36,7 @@
     background-color: var(--secondary-color);
     color: #fff;
   }
+  
   @media screen and (max-width: 600px) {
     flex-wrap: wrap;
   }
@@ -59,8 +58,6 @@
     background-color: #fff;
     color: black;
     cursor: pointer;
-
-    // transition: all 0.3s ease;
 
     &:hover {
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
@@ -107,9 +104,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
-
   opacity: 0;
-  // transition: all 0.3s ease;
 
   div {
     width: 50px;
@@ -127,7 +122,6 @@
       width: 50%;
       height: 50%;
       color: var(--white-color);
-      transition: all 0.3s ease;
     }
   }
 
@@ -149,13 +143,23 @@
   h4 {
     margin-top: 1rem;
     line-height: 1.5;
-  }
-  h4,
-  p {
-    text-align: center;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    width: 100%;
+    text-align: center;
+  }
+
+  p {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 10px;
+    line-height: 1.4;
+    max-height: calc(1.4em * 3);
+    text-align: center;
     width: 100%;
   }
 
@@ -170,9 +174,14 @@
 
 .app__work-touched-nowrap {
   .app__work-content {
-    h4,
-    p {
+    h4 {
       white-space: unset;
+    }
+    
+    p {
+      -webkit-line-clamp: unset;
+      max-height: none;
+      white-space: normal;
     }
   }
 }
